crates/reinhardt-pages/tests/ui/page/fail/controlled_bind_invalid_number_arity.stderr
error: `number(value, error)` requires exactly two arguments
 --> tests/ui/page/fail/controlled_bind_invalid_number_arity.rs:4:59
  |
4 |     let _ = page!({ input { a11y: off, type: "number", bind: number(()) } });
  |                                                              ^^^^^^^^^^
